<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:keepScreenOn="true">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="182dp">

        <TextView
            android:id="@+id/userScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/amaranth"
            android:text="@string/user_0"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:padding="7dp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/computerScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:fontFamily="@font/amaranth"
            android:text="@string/computer_0"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:padding="7dp"
            android:textStyle="bold">


        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="250dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/yourChoice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/your_choice"
                android:textSize="16sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="@color/black"
                android:fontFamily="@font/amaranth"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/yourChoiceImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/rock"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/computerChoice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/computer_choice"
                android:textSize="16sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="@color/black"
                android:fontFamily="@font/amaranth"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/computerChoiceImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/scissor"/>

        </LinearLayout>

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:fontFamily="@font/amaranth"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:text="@string/select_your_choice"
            android:gravity="center"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="545dp"
        android:layout_marginBottom="100dp">

        <ImageButton
            android:id="@+id/rock"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="25dp"
            android:layout_weight="1"
            android:background="@drawable/rock"
            android:tag="1" />


        <ImageButton
            android:id="@+id/paper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="25dp"
            android:layout_weight="1"
            android:background="@drawable/paper"
            android:tag="2" />


        <ImageButton
            android:id="@+id/scissor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="25dp"
            android:layout_weight="1"
            android:background="@drawable/scissor"
            android:tag="3" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/rock"
            android:fontFamily="@font/amaranth"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/paper"
            android:fontFamily="@font/amaranth"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/scissor"
            android:fontFamily="@font/amaranth"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/downText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amaranth"
        android:text="@string/select_your_choice"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/copyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/amaranth"
        android:gravity="center_horizontal"
        android:text="@string/copyright_nightxstudio_productions"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/countScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/_0"
        android:fontFamily="@font/amaranth"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="7sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout1"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/count"
        android:tag="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amaranth"
        android:gravity="end"
        android:padding="7sp"
        android:text="Count:"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/countScore"
        android:visibility="gone"/>



</androidx.constraintlayout.widget.ConstraintLayout>